fix extra 'datalad'

--- a/.github/workflows/generate_cat_entry.yml
+++ b/.github/workflows/generate_cat_entry.yml
@@ -52,7 +52,7 @@ jobs:
         echo '${{ steps.issue-parser.outputs.jsonString }}'
         echo '${{ steps.issue-parser.outputs.jsonString }}' | jq '.url'
         VARURL=$(echo '${{ steps.issue-parser.outputs.jsonString }}' | jq '.url')
-        echo '$VARURL'
-        datalad datalad clone -d . '$VARURL'
+        echo "$VARURL"
+        datalad clone -d . "$VARURL"
         datalad save -m "adds dataset to catalog"
         datalad push --to github
