--- a/.github/workflows/generate_cat_entry.yml
+++ b/.github/workflows/generate_cat_entry.yml
@@ -9,6 +9,14 @@ jobs:
     if: ${{ github.event.label.name == 'good-to-go' }}
     runs-on: ubuntu-latest
     steps:
+    - name: Set up system
+      shell: bash
+      run: |
+        bash <(wget -q -O- http://neuro.debian.net/_files/neurodebian-travis.sh)
+        sudo apt-get update -qq
+        sudo apt-get install eatmydata
+        sudo eatmydata apt-get install git-annex-standalone
+        
     - name: Set up environment
       run: |
         git config --global user.email "test@github.land"
