--- a/.github/workflows/generate_cat_entry.yml
+++ b/.github/workflows/generate_cat_entry.yml
@@ -9,18 +9,20 @@ jobs:
     if: ${{ github.event.label.name == 'good-to-go' }}
     runs-on: ubuntu-latest
     steps:
-    - name: Set up system
-      shell: bash
-      run: |
-        bash <(wget -q -O- http://neuro.debian.net/_files/neurodebian-travis.sh)
-        sudo apt-get update -qq
-        sudo apt-get install eatmydata
-        sudo eatmydata apt-get install git-annex-standalone
-
+    # - name: Set up system
+    #   shell: bash
+    #   run: |
+    #     bash <(wget -q -O- http://neuro.debian.net/_files/neurodebian-travis.sh)
+    #     sudo apt-get update -qq
+    #     sudo apt-get install eatmydata
+    #     sudo eatmydata apt-get install git-annex-standalone
+        
     - name: Set up environment
       run: |
         git config --global user.email "test@github.land"
         git config --global user.name "GitHub Almighty"
+
+    - uses: actions/checkout@v3
 
     - uses: stefanbuck/github-issue-praser@v2
       id: issue-parser
@@ -37,30 +39,24 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    # - name: Clone the superdataset
-    #   run: |
-    #     datalad clone "https://github.com/${{ github.repository }}.git"
-
-    - name: Checkout datalad-catalog
-      uses: actions/checkout@v3
-      with:
-        repository: datalad/datalad-catalog
-        path: datalad-catalog
+    # - name: Checkout datalad-catalog
+    #   uses: actions/checkout@v3
+    #   with:
+    #     repository: datalad/datalad-catalog
+    #     path: datalad-catalog
       
-    - name: Install datalad-catalog
-      run: |
-        pip install -e datalad-catalog/
+    # - name: Install datalad-catalog
+    #   run: |
+    #     pip install -e datalad-catalog/
 
-    - name: Checkout fairly-big-catalog-workflow
-      uses: actions/checkout@v3
-      with:
-        repository: jsheunis/fairly-big-catalog-workflow
-        path: fairly-big-catalog-workflow
+    # - name: Checkout fairly-big-catalog-workflow
+    #   uses: actions/checkout@v3
+    #   with:
+    #     repository: jsheunis/fairly-big-catalog-workflow
+    #     path: fairly-big-catalog-workflow
 
     - name: Add subdataset
       run: |
-        echo '${{ steps.issue-parser.outputs.jsonString }}'
-        echo '${{ steps.issue-parser.outputs.jsonString }}' | jq '.url'
         VARURL=$(echo '${{ steps.issue-parser.outputs.jsonString }}' | jq '.url')
         echo "$VARURL"
         datalad clone -d . "$VARURL"
