--- a/.github/workflows/generate_cat_entry.yml
+++ b/.github/workflows/generate_cat_entry.yml
@@ -9,19 +9,23 @@ jobs:
     if: ${{ github.event.label.name == 'good-to-go' }}
     runs-on: ubuntu-latest
     steps:
-    # - name: Set up system
+    - name: Set up environment
+      run: |
+        git config --global user.email "test@github.land"
+        git config --global user.name "GitHub Almighty"
+    
+    - name: Install datalad
+      shell: bash
+      run: |
+        sudo apt-get install datalad
+    # - name: Install git annex
     #   shell: bash
     #   run: |
     #     bash <(wget -q -O- http://neuro.debian.net/_files/neurodebian-travis.sh)
     #     sudo apt-get update -qq
     #     sudo apt-get install eatmydata
     #     sudo eatmydata apt-get install git-annex-standalone
-        
-    - name: Set up environment
-      run: |
-        git config --global user.email "test@github.land"
-        git config --global user.name "GitHub Almighty"
-
+    
     - uses: actions/checkout@v3
 
     - uses: stefanbuck/github-issue-praser@v2
@@ -34,10 +38,10 @@ jobs:
       with:
         python-version: 3.8
     
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+    # - name: Install dependencies
+    #   run: |
+    #     python -m pip install --upgrade pip
+    #     pip install -r requirements.txt
 
     # - name: Checkout datalad-catalog
     #   uses: actions/checkout@v3
