install git annex via neurodebian

--- a/.github/workflows/generate_cat_entry.yml
+++ b/.github/workflows/generate_cat_entry.yml
@@ -14,17 +14,17 @@ jobs:
         git config --global user.email "test@github.land"
         git config --global user.name "GitHub Almighty"
     
-    - name: Install datalad
-      shell: bash
-      run: |
-        sudo apt-get install datalad
-    # - name: Install git annex
+    # - name: Install datalad
     #   shell: bash
     #   run: |
-    #     bash <(wget -q -O- http://neuro.debian.net/_files/neurodebian-travis.sh)
-    #     sudo apt-get update -qq
-    #     sudo apt-get install eatmydata
-    #     sudo eatmydata apt-get install git-annex-standalone
+    #     sudo apt-get install datalad
+    - name: Install git annex
+      shell: bash
+      run: |
+        bash <(wget -q -O- http://neuro.debian.net/_files/neurodebian-travis.sh)
+        sudo apt-get update -qq
+        sudo apt-get install eatmydata
+        sudo eatmydata apt-get install git-annex-standalone
     
     - uses: actions/checkout@v3
 
