--- a/.github/workflows/generate_cat_entry.yml
+++ b/.github/workflows/generate_cat_entry.yml
@@ -1,47 +1,87 @@
+# This workflow runs on a merge/commit to the main branch
+# The goal is to extract metadata for any *new* datasets/files contained in the diff, and add this to the catalog
+# The first steps are:
+# - set up git config
+# - install git annex, python, datalad, metalad
+# - TODO: install whichever extensions are needed for metadata extraction (this would be specific to the type of data contained in this overall repository+catalog)
+# Then we find the diff and:
+# - check if new datasets were added
+# - check for updates to existing datasets
+# Then extract metadata for new/updated datasets
+# Then translate extracted metadata to catalog schema
+# Then checkout catalog from gh-pages branch, and add translated metadata to catalog
+# Then push updates back to gh-pages branch
+
 name: generate_cat_entry
 
 on:
-  issues:
-    types: labeled
+  push:
+    branches:
+      - main
 
 jobs:
+  check:
+    runs-on: ubuntu-latest
+    outputs:
+      run_job: ${{ steps.check_files.outputs.run_job }}
+    steps:
+      - name: Set up environment
+        run: |
+          git config --global user.email "test@github.land"
+          git config --global user.name "GitHub Almighty"
+      - name: Checkout main
+        uses: actions/checkout@v3
+        with:
+          ref: main
+          fetch-depth: 0
+      - name: check modified files, specifically gitmodules
+        id: check_files
+        run: |
+          echo "========== check if any modified files include *datalad_catalog/catalog/* =========="
+          changed_files=$(git diff --name-only ${{ github.event.after }}..${{ github.event.before }})
+          echo "::set-output name=run_job::false"
+          while read -r line; do
+            echo "changed file: $line"
+            if [[ $line == .gitmodules ]]; then
+              echo "::set-output name=run_job::true"
+              break
+            fi
+          done <<< "$changed_files"
+
   build:
-    if: ${{ github.event.label.name == 'good-to-go' }}
+    needs: check
+    if: needs.check.outputs.run_job == 'true'
     runs-on: ubuntu-latest
     steps:
-    - name: Set up environment
-      run: |
-        git config --global user.email "test@github.land"
-        git config --global user.name "GitHub Almighty"
-    
-    # - name: Install datalad
-    #   shell: bash
-    #   run: |
-    #     sudo apt-get install datalad
     - name: Install git annex
       shell: bash
       run: |
-        bash <(wget -q -O- http://neuro.debian.net/_files/neurodebian-travis.sh)
-        sudo apt-get update -qq
-        sudo apt-get install eatmydata
-        sudo eatmydata apt-get install git-annex-standalone
-    
-    - uses: actions/checkout@v3
+        echo "the gitmodules file has changed! now lets do some shit!"
 
-    - uses: stefanbuck/github-issue-praser@v2
-      id: issue-parser
-      with:
-        template-path: .github/ISSUE_TEMPLATE/add_dataset.yml
+
+
+    # - name: Set up environment
+    #   run: |
+    #     git config --global user.email "test@github.land"
+    #     git config --global user.name "GitHub Almighty"
     
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.8
+    # - name: Install git annex
+    #   shell: bash
+    #   run: |
+    #     bash <(wget -q -O- http://neuro.debian.net/_files/neurodebian-travis.sh)
+    #     sudo apt-get update -qq
+    #     sudo apt-get install eatmydata
+    #     sudo eatmydata apt-get install git-annex-standalone
     
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install --upgrade -r requirements.txt
+    # - name: Set up Python 3.9
+    #   uses: actions/setup-python@v1
+    #   with:
+    #     python-version: 3.9
+    
+    # - name: Install dependencies
+    #   run: |
+    #     python -m pip install --upgrade pip
+    #     pip install --upgrade -r requirements.txt
 
     # - name: Checkout datalad-catalog
     #   uses: actions/checkout@v3
@@ -55,14 +95,15 @@ jobs:
 
     # - name: Checkout fairly-big-catalog-workflow
     #   uses: actions/checkout@v3
-    #   with:
     #     repository: jsheunis/fairly-big-catalog-workflow
     #     path: fairly-big-catalog-workflow
+    
 
-    - name: Add subdataset
-      run: |
-        VARURL=$(echo '${{ steps.issue-parser.outputs.jsonString }}' | jq -r '.url')
-        echo "$VARURL"
-        datalad clone -d . "$VARURL"
-        datalad save -m "adds $VARURL to catalog"
-        datalad push --to origin
+
+    # - name: Add subdataset
+    #   run: |
+    #     VARURL=$(echo '${{ steps.issue-parser.outputs.jsonString }}' | jq -r '.url')
+    #     echo "$VARURL"
+    #     datalad clone -d . "$VARURL"
+    #     datalad save -m "adds $VARURL to catalog"
+    #     datalad push --to origin
