--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/psychoinformatics-de/studyforrest-data-structural.git
 	datalad-id = 1882e2e6-fbbf-4ade-a65f-3a1615235f51
 	datalad-url = https://github.com/psychoinformatics-de/studyforrest-data-structural.git
+[submodule "studyforrest-data-freesurfer"]
+	path = studyforrest-data-freesurfer
+	url = https://github.com/psychoinformatics-de/studyforrest-data-freesurfer
+	datalad-id = 3304e775-5f5f-435a-b68e-d98c9f5fb72a
+	datalad-url = https://github.com/psychoinformatics-de/studyforrest-data-freesurfer
