--- a/.github/workflows/generate_cat_entry.yml
+++ b/.github/workflows/generate_cat_entry.yml
@@ -24,39 +24,61 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       run_job: ${{ steps.check_files.outputs.run_job }}
+      subds: ${{ steps.check_files.outputs.subds }}
     steps:
       - name: Set up environment
         run: |
           git config --global user.email "test@github.land"
           git config --global user.name "GitHub Almighty"
+      - name: Install git annex
+        shell: bash
+        run: |
+          bash <(wget -q -O- http://neuro.debian.net/_files/neurodebian-travis.sh)
+          sudo apt-get update -qq
+          sudo apt-get install eatmydata
+          sudo eatmydata apt-get install git-annex-standalone
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.9
+      - name: Install datalad
+        run: |
+          python -m pip install --upgrade pip
+          pip install --upgrade datalad
       - name: Checkout main
         uses: actions/checkout@v3
         with:
           ref: main
           fetch-depth: 0
-      - name: check modified files, specifically gitmodules
+      - name: check datalad diff
         id: check_files
         run: |
-          echo "========== check if any modified files include *datalad_catalog/catalog/* =========="
-          changed_files=$(git diff --name-only ${{ github.event.after }}..${{ github.event.before }})
+          echo "========== check datalad diff =========="
+          datalad diff --from ${{ github.event.before }} --to ${{ github.event.after }}
+          datalad_diffs=$(datalad diff --from ${{ github.event.before }} --to ${{ github.event.after }})
           echo "::set-output name=run_job::false"
+          prefix="added: "
+          suffix="(dataset)"
           while read -r line; do
-            echo "changed file: $line"
-            if [[ $line == .gitmodules ]]; then
+            echo "changed item: $line"
+            if [[ $line == *$prefix*$suffix* ]]; then
+              subds=${line#"$prefix"}
+              subds=${subds%"$suffix"}
+              echo "::set-output name=subds::$subds"
               echo "::set-output name=run_job::true"
               break
             fi
-          done <<< "$changed_files"
+          done <<< "$datalad_diffs"
 
   build:
     needs: check
     if: needs.check.outputs.run_job == 'true'
     runs-on: ubuntu-latest
     steps:
-    - name: Install git annex
+    - name: Echo some shit
       shell: bash
       run: |
-        echo "the gitmodules file has changed! now lets do some shit!"
+        echo "got to do some shit for: ${{needs.check.outputs.subds}}"
 
 
 
