--- a/.github/workflows/generate_cat_entry.yml
+++ b/.github/workflows/generate_cat_entry.yml
@@ -67,6 +67,8 @@ jobs:
               echo "::set-output name=subds::$subds"
               echo "::set-output name=run_job::true"
               break
+              # This currently assumes that there was a single update in the form of
+              # an added subdataset. TODO: run multiple jobs or loop in case of multiple updates
             fi
           done <<< "$datalad_diffs"
 
@@ -79,53 +81,67 @@ jobs:
       shell: bash
       run: |
         echo "got to do some shit for: ${{needs.check.outputs.subds}}"
+    - name: Set up environment
+      run: |
+        git config --global user.email "test@github.land"
+        git config --global user.name "GitHub Almighty"
+    - name: Install git annex
+      shell: bash
+      run: |
+        bash <(wget -q -O- http://neuro.debian.net/_files/neurodebian-travis.sh)
+        sudo apt-get update -qq
+        sudo apt-get install eatmydata
+        sudo eatmydata apt-get install git-annex-standalone
+    - name: Set up Python 3.9
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.9
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install --upgrade -r requirements.txt
+    - name: Checkout main
+      uses: actions/checkout@v3
+      with:
+        ref: main
+        fetch-depth: 0
+    - name: Checkout datalad-catalog
+      uses: actions/checkout@v3
+      with:
+        repository: datalad/datalad-catalog
+        path: datalad-catalog
+    - name: Install datalad-catalog
+      run: |
+        pip install -e datalad-catalog/
+    - name: Checkout fairly-big-catalog-workflow
+      uses: actions/checkout@v3
+      with:
+        repository: jsheunis/fairly-big-catalog-workflow
+        path: fairly-big-catalog-workflow
+    - name: Checkout catalog branch
+      uses: actions/checkout@v3
+      with:
+        ref: catalog
+        path: catalogbranch
+    - name: Run workflow for extraction+translation+catalog-update
+      run: |
+        # Extract+translate+add metadata for new subdataset
+        /bin/zsh fairly-big-catalog-workflow/local/local_extract_datasetlevel.sh ${{needs.check.outputs.subds}} extracted_sub_metadata.txt
+        /bin/zsh fairly-big-catalog-workflow/local/local_translate_metadata.sh extracted_sub_metadata.txt translated_sub_metadata.txt
+        datalad catalog add -c catalogdir -m translated_sub_metadata.txt
 
+        # Extract+translate+add metadata for updated version of superdataset
+        /bin/zsh fairly-big-catalog-workflow/local/local_extract_datasetlevel.sh . extracted_super_metadata.txt
+        /bin/zsh fairly-big-catalog-workflow/local/local_translate_metadata.sh extracted_super_metadata.txt translated_super_metadata.txt
+        datalad catalog add -c catalogdir -m translated_super_metadata.txt
+        
+        # Set new super id and version of catalog
+        SUPER_ID=$(git config -f .datalad/config datalad.dataset.id)
+        SUPER_VERSION=$(git rev-parse HEAD)
+        datalad catalog set-super -c catalogdir -i "$SUPER_ID" -v "$SUPER_VERSION"
 
-
-    # - name: Set up environment
-    #   run: |
-    #     git config --global user.email "test@github.land"
-    #     git config --global user.name "GitHub Almighty"
-    
-    # - name: Install git annex
-    #   shell: bash
-    #   run: |
-    #     bash <(wget -q -O- http://neuro.debian.net/_files/neurodebian-travis.sh)
-    #     sudo apt-get update -qq
-    #     sudo apt-get install eatmydata
-    #     sudo eatmydata apt-get install git-annex-standalone
-    
-    # - name: Set up Python 3.9
-    #   uses: actions/setup-python@v1
-    #   with:
-    #     python-version: 3.9
-    
-    # - name: Install dependencies
-    #   run: |
-    #     python -m pip install --upgrade pip
-    #     pip install --upgrade -r requirements.txt
-
-    # - name: Checkout datalad-catalog
-    #   uses: actions/checkout@v3
-    #   with:
-    #     repository: datalad/datalad-catalog
-    #     path: datalad-catalog
-      
-    # - name: Install datalad-catalog
-    #   run: |
-    #     pip install -e datalad-catalog/
-
-    # - name: Checkout fairly-big-catalog-workflow
-    #   uses: actions/checkout@v3
-    #     repository: jsheunis/fairly-big-catalog-workflow
-    #     path: fairly-big-catalog-workflow
-    
-
-
-    # - name: Add subdataset
-    #   run: |
-    #     VARURL=$(echo '${{ steps.issue-parser.outputs.jsonString }}' | jq -r '.url')
-    #     echo "$VARURL"
-    #     datalad clone -d . "$VARURL"
-    #     datalad save -m "adds $VARURL to catalog"
-    #     datalad push --to origin
+        # Commit and push to catalog branch
+        cd catalogbranch
+        git add --all
+        git commit -m "adds new subdataset to catalog"
+        git push origin catalog
