--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,8 @@
 	url = https://github.com/psychoinformatics-de/studyforrest-data-phase2
 	datalad-id = 5eaff716-54eb-11e8-803d-a0369f7c647e
 	datalad-url = https://github.com/psychoinformatics-de/studyforrest-data-phase2
+[submodule "studyforrest-data-multires3t"]
+	path = studyforrest-data-multires3t
+	url = https://github.com/psychoinformatics-de/studyforrest-data-multires3t
+	datalad-id = 5b1081d6-84d7-11e8-b00a-a0369fb55db0
+	datalad-url = https://github.com/psychoinformatics-de/studyforrest-data-multires3t
