--- a/.gitmodules
+++ b/.gitmodules
@@ -23,3 +23,8 @@
 	url = https://github.com/psychoinformatics-de/studyforrest-data-multires3t
 	datalad-id = 5b1081d6-84d7-11e8-b00a-a0369fb55db0
 	datalad-url = https://github.com/psychoinformatics-de/studyforrest-data-multires3t
+[submodule "gumpdata"]
+	path = gumpdata
+	url = https://github.com/mih/gumpdata
+	datalad-id = 0f66b1ba-e9a9-46fd-b9d9-2e64fe94d307
+	datalad-url = https://github.com/mih/gumpdata
