--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,8 @@
 	url = https://github.com/mih/gumpdata
 	datalad-id = 0f66b1ba-e9a9-46fd-b9d9-2e64fe94d307
 	datalad-url = https://github.com/mih/gumpdata
+[submodule "studyforrest-data-multires7t"]
+	path = studyforrest-data-multires7t
+	url = https://github.com/psychoinformatics-de/studyforrest-data-multires7t
+	datalad-id = 3a8648b3-7df8-413f-8efb-4d39040ac174
+	datalad-url = https://github.com/psychoinformatics-de/studyforrest-data-multires7t
