--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-datalad >= 0.17.0
-datalad-metalad >= 0.3.10
-git+https://github.com/datalad/datalad-neuroimaging.git@refs/pull/104/head
+datalad >= 0.18.0
+datalad-metalad >= 0.4.10
+datalad-neuroimaging >= 0.3.3
